# gpui-component

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/story-web/src/: lib.rs
crates/story-web/www/src/: main.js
crates/story/examples/: editor.rs  markdown.rs  tiles.rs
crates/story/examples/fixtures/: test.md
crates/story/src/: app_menus.rs  lib.rs
crates/story/src/stories/: checkbox_story.rs  data_table_story.rs  input_story.rs  number_input_story.rs  progress_story.rs  select_story.rs  sidebar_story.rs  switch_story.rs  tooltip_story.rs
crates/story/src/stories/theme_story/: color_theme_story.rs
crates/ui/src/: anchored.rs  checkbox.rs  color_picker.rs  hover_card.rs  lib.rs  popover.rs  radio.rs  root.rs  select.rs  sheet.rs
crates/ui/src/button/: button.rs  dropdown_button.rs  toggle.rs
crates/ui/src/dialog/: dialog.rs
crates/ui/src/dock/: tiles.rs
crates/ui/src/input/: element.rs  input.rs  mod.rs  movement.rs  otp_input.rs  search.rs  state.rs
crates/ui/src/input/display_map/: text_wrapper.rs
crates/ui/src/input/lsp/: completions.rs  mod.rs
crates/ui/src/input/popovers/: context_menu.rs  hover_popover.rs  mod.rs
crates/ui/src/list/: list.rs  list_item.rs
crates/ui/src/menu/: popup_menu.rs
crates/ui/src/progress/: mod.rs  progress.rs  progress_circle.rs
crates/ui/src/resizable/: panel.rs
crates/ui/src/setting/: settings.rs
crates/ui/src/sidebar/: menu.rs  mod.rs
crates/ui/src/tab/: tab.rs  tab_bar.rs
crates/ui/src/table/: column.rs  delegate.rs  state.rs
crates/ui/src/text/: node.rs
crates/ui/src/theme/: schema.rs
